--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>>
 	<ul>
-		<li><a href="job1/zuoye.html">job1</a></li>
-		<li><a href="job2/作业1.html">job2</a></li>
+		<li><a href="job1/zuoye.html">大傻子</a></li>
+		<li><a href="job2/作业1.html">二傻子</a></li>
 		<li><a href="job3/html/作业三.html">job3</a></li>
 		<li><a href="job4/index.html">job4</a></li>
 	</ul>
