--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<li><a href="job2/作业1.html">job2</a></li>
 		<li><a href="job3/html/作业三.html">job3</a></li>
 		<li><a href="job4/index.html">job4</a></li>
+		<li><a href="作业5/html/index.html">job5</a></li>
+		<li><a href="图片滚动/图片滚动.html">job6</a></li>
 	</ul>
 </body>
 </html>
